--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -84,7 +84,7 @@
         .first-image{
             width: 35%;
             margin: 0px;
-            background-image: url(/images/hudu-image.jpg);
+            background-image: url(/static/images/hudu-image.jpg);
             background-size: 150% 100%;
             background-repeat:none;
         }
@@ -198,7 +198,7 @@
     <div class="container">
         <div class="top-page">
             <div class="logo-container">
-                <img class="hudu-logo" src="/images/Hudu Icon.png" alt="hudu main logo">
+                <img class="hudu-logo" src="/static/images/Hudu Icon.png" alt="hudu main logo">
             </div>
             <h2 class="main-text">Hudu has its own website, but does not actively market itself as an independent entity. we do actively engage in marketing and promotions efforts for our school, Bottega.</h2>
             <a href="www.huduacadamy.com">www.huduacadamy.com</a>
@@ -206,7 +206,7 @@
         <div class="bottom-page">
             <div class="first-section">
                 <div class="first-content">
-                    <img class="first-logo" src="/images/Hudu logo-02.png" />
+                    <img class="first-logo" src="/static/images/Hudu logo-02.png" />
                     <h2>Providing Governence, Leadership, and Accountability for Schools, School Systems, and Programs</h2>
                     <div class="first-visit">
                         <p>Visit our School of Technology</p>
@@ -221,7 +221,7 @@
             </div>
             <div class="second-section">
                 <div class="second-logo">
-                    <img src="/images/Hudu-Illustration-White copy.png" />
+                    <img src="/static/images/Hudu-Illustration-White copy.png" />
                 </div>
                 <div class="second-content">
                     <h2>Hudu Concentractions</h2>
@@ -236,7 +236,7 @@
             </div>
             <div class="third-section">
                 <div class="third-content">
-                    <img src="/images/AdvancED_logo.png" alt="" class="third-advance">
+                    <img src="/static/images/AdvancED_logo.png" alt="" class="third-advance">
                     <div class="third-paragraph">
                         The <span>AdvanceED</span> Improvement Network is a community of over 34,000 schools and school systems across the United States and in 70 other nations. School improvements is a journey and not all education institutions start or end at the same place. Hudu has adopted the <span>AdvanceED Continuous Improvement System</span>, a framework for data-informed school  improvement  adn effectiveness. This fully integrated solution helps institutions map out and navigate a succesful journey that is personalized and customized to their specific needs.
                     </div>
