heroku fix 3 (bottega tech button margin fix and links linked)

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -22,7 +22,7 @@
         hr{
             height: 50px;
             background-color: black;
-            margin: 0 14.5px;
+            margin: 0;
         }
         .first-section{
             height: 50vh;
@@ -62,7 +62,9 @@
             letter-spacing: 3px;
             font-size: 14px;
             border: white 1px solid;
-            margin: 0px 15px;
+            margin:0 0 0 5px;
+            color: white;
+            text-decoration: none;
         }
         .first-image{
             width: 35%;
@@ -186,13 +188,10 @@
                     <h2>Providing Governence, Leadership, and Accountability for Schools, School Systems, and Programs</h2>
                     <div class="first-visit">
                         <p>Visit our School of Technology</p>
-                        <a class="bottega-button">BOTTEGA TECH</a>
+                        <a href="https://bottega.tech/" class="bottega-button">BOTTEGA TECH</a>
                     </div>
                 </div>
                 <div class="first-image">
-                    <div class="first-contactus">
-                        <div>Contact Us</div>
-                    </div>
                 </div>
             </div>
             <div class="second-section">
@@ -220,15 +219,15 @@
                 <div class="third-link-container">
                     <div class="third-link">
                         <h3>Visit our partner school</h3>
-                        <a href="" class="third-links">Check It Out!</a>
+                        <a href="https://bottega.tech/" class="third-links">Check Us Out!</a>
                     </div>
                     <div class="third-link">
                         <h3>AdvancED accredited</h3>
-                        <a href="" class="third-links">See Details</a>
+                        <a href="https://www.advanc-ed.org/" class="third-links">See Details</a>
                     </div>
                     <div class="third-link">
                         <h3>Have questions?</h3>
-                        <a href="" class="third-links">Contact Us</a>
+                        <a href="http://www.advanc-ed.org/oasis2/u/par/accreditation/summary?institutionId=57324" class="third-links">Contact Us</a>
                     </div>
                 </div>
             </div>
