first media styles

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -177,6 +177,28 @@
             margin-top: 20px;
             
         }
+        @media (max-width: 800px){
+            .first-content h2{
+                font-size: 3vw;
+            }
+            .first-image{
+                opacity: 0;
+            }
+            .first-content{
+                width: 100%;
+            }
+            .second-section{
+                flex-direction: column;
+                height: 70vh;
+            }
+            .second-logo{
+                width: 100%;
+            }
+            .second-logo img{
+                width: 200px;
+                height: 200px;
+            }
+        }
     </style>
 </head>
 <body>
