mobile bug fix #2

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -272,8 +272,14 @@
         }
         @media (max-width: 420px){
             .third-section{
-                height: 110vh;
+                height: 100%;
                 grid-gap: 2px;
+            }
+            .third-content{
+                padding: 10px;
+            }
+            .third-link-container{
+                padding-bottom: 10px;
             }
             .second-section{
                 height: 95vh
