mobile bug fix #3

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -282,16 +282,16 @@
                 padding-bottom: 10px;
             }
             .second-section{
-                height: 95vh
+                height: 699px;
             }
             .second-logo{
-                width: 100vw;
+                width: 414px;
             }
             .second-logo img{
-                width: 50vw;
+                width: 200px;
             }
             .third-link-container{
-                height: 25vh;
+                height: 175px;
             }
             .third-link h3{
                 font-size: 18px;
@@ -302,6 +302,7 @@
             }
             .second-list li{
                 letter-spacing: .1px;
+                font-size: 17px;
             }
         }
     </style>
