mobile bug fix #5

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -272,7 +272,7 @@
         }
         @media (max-width: 420px){
             .third-section{
-                height: 736px;;
+                height: 900px;
                 grid-gap: 2px;
             }
             .third-content{
