mobile bug fix #6

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -259,6 +259,7 @@
             }
             .third-link-container{
                 height: 25vh;
+                justify-content: space-between;
             }
             .third-link h3{
                 font-size: 18px;
@@ -273,7 +274,7 @@
         @media (max-width: 420px){
             .third-section{
                 height: 900px;
-                grid-gap: 2px;
+                grid-gap: 0;
             }
             .third-content{
                 padding: 10px;
