mobile bug fix #6

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -259,7 +259,7 @@
             }
             .third-link-container{
                 height: 25vh;
-                justify-content: space-between;
+                align-content: space-between;
             }
             .third-link h3{
                 font-size: 18px;
