mobile bug fix #7

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -263,6 +263,7 @@
             }
             .third-link h3{
                 font-size: 18px;
+                margin: 10px 0px;
             }
             .third-links{
                 font-size: 18px;
