mobile bug fix #7

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -259,11 +259,9 @@
             }
             .third-link-container{
                 height: 25vh;
-                align-content: space-between;
             }
             .third-link h3{
                 font-size: 18px;
-                margin: 10px 0px;
             }
             .third-links{
                 font-size: 18px;
@@ -282,6 +280,7 @@
             }
             .third-link-container{
                 padding-bottom: 10px;
+                align-content: space-between;
             }
             .second-section{
                 height: 699px;
@@ -297,10 +296,11 @@
             }
             .third-link h3{
                 font-size: 18px;
-                margin: 6px;
+                margin: 10px 0;
             }
             .third-links{
                 font-size: 18px;
+                
             }
             .second-list li{
                 letter-spacing: .1px;
