mobile bug fix #8

--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -295,12 +295,12 @@
                 height: 175px;
             }
             .third-link h3{
-                font-size: 18px;
+                font-size: 16px;
                 margin: 10px 0;
             }
             .third-links{
-                font-size: 18px;
-                
+                font-size: 16px;
+                width: 100px;
             }
             .second-list li{
                 letter-spacing: .1px;
