--- a/templates/hudu.html
+++ b/templates/hudu.html
@@ -296,11 +296,12 @@
             }
             .third-link h3{
                 font-size: 16px;
-                margin: 10px 0;
+                margin: 10px 0 0 0;
             }
             .third-links{
                 font-size: 16px;
                 width: 100px;
+                margin-top: 15px;
             }
             .second-list li{
                 letter-spacing: .1px;
